@@ -17,5 +17,6 @@ localhost	in	a		127.0.0.1
 
 
 www       in  cname sub.university.edu.
+desktop-1 in  aaaa  3FFE:800::2A8:79FF:FE32:1982
 desktop-1 in  a     192.168.1.100
           in  hinfo PC NT
