@@ -3,6 +3,7 @@ Current Release
 - Fixed bug that was making an extra any view dependency in zone_importer_lib
 - Added duplicate record checking in zone_exporter_lib
 - Fixed tree exporter to work with new acl_range table
+- Added ipv6 support to zone_importer for both forward and reverse zones
 
 2010-01-27 release-0.11
 - Added missing named conf error in tree_exporter.py
